--- a/site/index.html
+++ b/site/index.html
@@ -4892,6 +4892,18 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-6-1</p>
+<ul>
+<li>修复ChatTTS无法使用的bug</li>
+</ul>
+</li>
+<li>
+<p>2024-5-29</p>
+<ul>
+<li>更新睿声tts接口</li>
+</ul>
+</li>
+<li>
 <p>2024-5-26</p>
 <ul>
 <li>违禁词新增到7w行（一定程度上会拖慢处理速度）</li>
