--- a/site/index.html
+++ b/site/index.html
@@ -4892,6 +4892,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-6-4</p>
+<ul>
+<li>删除无用文档</li>
+<li>更新脚本默认执行备份脚本</li>
+</ul>
+</li>
+<li>
 <p>2024-6-1</p>
 <ul>
 <li>修复ChatTTS无法使用的bug</li>
