音频mixer初始化增加异常捕获，针对声卡异常情况下给予提示，以不影响播放逻辑运行

--- a/site/index.html
+++ b/site/index.html
@@ -4893,6 +4893,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-6-12</p>
+<ul>
+<li>音频mixer初始化增加异常捕获，针对声卡异常情况下给予提示，以不影响播放逻辑运行</li>
+</ul>
+</li>
+<li>
 <p>2024-6-7</p>
 <ul>
 <li>cv2移到函数内导入；</li>
