--- a/site/index.html
+++ b/site/index.html
@@ -4893,6 +4893,19 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-6-14</p>
+<ul>
+<li>bert_vits2 新增 刘悦-中文特化API 的对接；</li>
+</ul>
+</li>
+<li>
+<p>2024-6-14</p>
+<ul>
+<li>增加mentahuman和musetalk(<a href="https://github.com/lipku/metahuman-stream">metahuman-stream</a>)实时交互数字人接入ai-vtuber的能力，可以直播带货，也可以做数字分身</li>
+<li>重新整理虚拟身体板块 排序</li>
+</ul>
+</li>
+<li>
 <p>2024-6-12</p>
 <ul>
 <li>音频mixer初始化增加异常捕获，针对声卡异常情况下给予提示，以不影响播放逻辑运行</li>
