--- a/site/index.html
+++ b/site/index.html
@@ -4911,6 +4911,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-6-15</p>
+<ul>
+<li>优化metahuman-stream对接部分源码（运行逻辑部分待调整）</li>
+</ul>
+</li>
+<li>
 <p>2024-6-14</p>
 <ul>
 <li>bert_vits2 新增 刘悦-中文特化API 的对接；</li>
