--- a/site/index.html
+++ b/site/index.html
@@ -6866,8 +6866,9 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <h3 id="_84">💸投资方</h3>
 <p><img alt="image" src="static/images/luna-ai/invest.png" /></p>
 <h3 id="_85">合作伙伴</h3>
-<p>青椒云：<a href="//account.qingjiaocloud.com/signin?inviteCode=4Q92ROBQ">qingjiaocloud.com</a> <code>AIGC 高性能云桌面</code>  </p>
-<p>睿声AI：<a href="//www.reecho.ai/">reecho.ai</a> <code>瞬时创建 超级拟真的 人工智能克隆语音</code>  </p>
+<p>青椒云：<a href="https://account.qingjiaocloud.com/signin?inviteCode=4Q92ROBQ">qingjiaocloud.com</a>  ———— AIGC 高性能云桌面  </p>
+<p>睿声AI：<a href="https://www.reecho.ai/">reecho.ai</a>  ———— 瞬时创建 超级拟真的 人工智能克隆语音  </p>
+<p>AIHubMix: <a href="https://aihubmix.com/register?aff=1BMI">aihubmix.com</a>  ———— OpenAI,Google,通义千问等大语言模型API代理站  </p>
 <h3 id="_86">🙌赞助</h3>
 <p><img alt="image" src="static/images/luna-ai/alipay.png" width="200" />
 <img alt="image" src="static/images/luna-ai/wechatpay.png" width="200" /></p>
