--- a/site/index.html
+++ b/site/index.html
@@ -4958,6 +4958,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-6-15</p>
 <ul>
 <li>优化metahuman-stream对接部分源码（运行逻辑部分待调整）</li>
+<li>过滤板块新增 指定前后缀触发LLM功能，可以限制部分弹幕触发LLM，部分弹幕只进行其他功能的执行</li>
 </ul>
 </li>
 <li>
