--- a/site/index.html
+++ b/site/index.html
@@ -4975,6 +4975,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-6-16</p>
 <ul>
 <li>LLM新增 LLM_TPU 的gradio对接 </li>
+<li>补充webui的配置提示；</li>
+<li>新增串口类（为后期串口控制功能做准备）</li>
 </ul>
 </li>
 <li>
