--- a/site/index.html
+++ b/site/index.html
@@ -4972,6 +4972,18 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-6-18</p>
+<ul>
+<li>chattts api调用改get为post请求</li>
+</ul>
+</li>
+<li>
+<p>2024-6-17</p>
+<ul>
+<li>新增 串口页面，为后期串口功能开发开路（暂未开放）</li>
+</ul>
+</li>
+<li>
 <p>2024-6-16</p>
 <ul>
 <li>LLM新增 LLM_TPU 的gradio对接 </li>
