--- a/site/index.html
+++ b/site/index.html
@@ -4972,6 +4972,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-6-21</p>
+<ul>
+<li>ChatTTS gradio新增 0621版的兼容 </li>
+<li>针对无桌面情况，将pyautogui移到运行处导入</li>
+</ul>
+</li>
+<li>
 <p>2024-6-18</p>
 <ul>
 <li>chattts api调用改get为post请求</li>
