--- a/site/index.html
+++ b/site/index.html
@@ -4976,6 +4976,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>针对通义星尘 上下文长度配置项数据类型错误问题进行修复</li>
 <li>metahuman-stream 支持wav2lip</li>
+<li>新增 抖音2 监听方案（以便适配非win平台）</li>
 </ul>
 </li>
 <li>
