--- a/site/index.html
+++ b/site/index.html
@@ -4972,6 +4972,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-6-23</p>
+<ul>
+<li>修复部分webui描述错误问题  </li>
+</ul>
+</li>
+<li>
 <p>2024-6-22</p>
 <ul>
 <li>针对通义星尘 上下文长度配置项数据类型错误问题进行修复</li>
