--- a/site/index.html
+++ b/site/index.html
@@ -4972,9 +4972,23 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-6-26</p>
+<ul>
+<li>聊天页 补充参数CHANNELS RATE的设置 </li>
+<li>全局替换日志 logging为loguru </li>
+</ul>
+</li>
+<li>
+<p>2024-6-24</p>
+<ul>
+<li>LLM返回内容，一律替换 \n换行符 \n字符串为空</li>
+</ul>
+</li>
+<li>
 <p>2024-6-23</p>
 <ul>
-<li>修复部分webui描述错误问题  </li>
+<li>智谱 2.x版本API调用补充top_p和temperature的参数</li>
+<li>补充遗漏的智谱模型，修复配置项描述错误</li>
 </ul>
 </li>
 <li>
