--- a/site/index.html
+++ b/site/index.html
@@ -4993,6 +4993,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-6-27</p>
 <ul>
 <li>修复睿声调用，音频后缀名改为mp3</li>
+<li>睿声AI 新增新版API的几个参数，可以支持V2.0的调用（没测过，不确定）</li>
 </ul>
 </li>
 <li>
