--- a/site/index.html
+++ b/site/index.html
@@ -4369,6 +4369,8 @@ playwright<span class="w"> </span>install
 <p>浏览器安装<a href="https://www.tampermonkey.net/">油猴插件</a>后，再安装上面的脚本，打开需要监听的直播间后，就会自动监听弹幕，连接WS服务，然后把AI Vtuber运行起来，进行对接。 </p>
 <h4 id="_45">斗鱼直播监听</h4>
 <p>借鉴 <a href="//github.com/XiaoXinYo/Live-Barrage">Live-Barrage <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"/></svg></span></a>  </p>
+<p>浏览器安装<code>油猴</code>插件，然后在前往 插件商店安装 直播弹幕监听 转发至本地WS服务端-<a href="https://greasyfork.org/zh-CN/scripts/490966">https://greasyfork.org/zh-CN/scripts/490966</a> 插件，安装完成后，前往你想捕获的直播间，按F12打开开发者工具，看看console 控制台的输出，是否有监听到弹幕信息，有的话就没事了，没有的话可以刷新重试或者手动在console注入js运行。  </p>
+<p>最后AI Vtuber选择<code>斗鱼</code>平台，然后运行就可以了，ws会传输弹幕信息。  </p>
 <h4 id="youtube">YouTube直播监听</h4>
 <p>依赖库：<a href="//github.com/taizan-hokuto/pytchat/tree/master">pytchat</a>  </p>
 <p>修改平台后，配置直播间号即可，如<code>https://www.youtube.com/watch?v=P5wlxQgYhMY</code>的直播间号就是<code>P5wlxQgYhMY</code>  </p>
