--- a/site/index.html
+++ b/site/index.html
@@ -4846,7 +4846,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>metahuman-stream 官方仓库：<a href="https://github.com/lipku/metahuman-stream">https://github.com/lipku/metahuman-stream</a><br />
 官方部署教程：<a href="https://www.bilibili.com/video/BV1kr421G7ho">https://www.bilibili.com/video/BV1kr421G7ho</a>  </p>
 <p>使用概览：<a href="https://github.com/Ikaros-521/AI-Vtuber/pull/881">https://github.com/Ikaros-521/AI-Vtuber/pull/881</a>  </p>
-<p>视频教程：<a href="https://www.bilibili.com/video/BV1Jy411q7sy">https://www.bilibili.com/video/BV1Jy411q7sy</a>  </p>
+<p>对接使用视频教程：<a href="https://www.bilibili.com/video/BV1Jy411q7sy">https://www.bilibili.com/video/BV1Jy411q7sy</a>  </p>
+<p>训练模型视频教程：<a href="https://www.bilibili.com/video/BV1rJ4m1u7sy/">https://www.bilibili.com/video/BV1rJ4m1u7sy/</a>  </p>
 <h3 id="_63">图像识别</h3>
 <h4 id="gemini_1">gemini</h4>
 <p>【AI主播-图像识别篇】新增 摄像头截图功能，可以进行现实互动，未来会继续互动方式：<a href="https://www.bilibili.com/video/BV132421P7WT">https://www.bilibili.com/video/BV132421P7WT</a>  </p>
@@ -4991,6 +4992,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
+<li>
+<p>2024-7-2</p>
+<ul>
+<li>webui 通用配置的聊天类型 改名为 大语言模型</li>
+<li>通用函数增加异常捕获</li>
+</ul>
+</li>
 <li>
 <p>2024-6-27</p>
 <ul>
