--- a/site/index.html
+++ b/site/index.html
@@ -4993,6 +4993,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-7-3</p>
+<ul>
+<li>修改faster-whisper默认模型为small</li>
+</ul>
+</li>
+<li>
 <p>2024-7-2</p>
 <ul>
 <li>webui 通用配置的聊天类型 改名为 大语言模型</li>
