--- a/site/index.html
+++ b/site/index.html
@@ -4996,6 +4996,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-7-3</p>
 <ul>
 <li>修改faster-whisper默认模型为small</li>
+<li>本地问答板块 新增文本框用于json编辑，默认用于编辑 本地问答.json，方便修改内容，你也可以用作修改其他json文件。格式一定要对啊；</li>
+<li>修复睿声配置保存格式错误bug</li>
 </ul>
 </li>
 <li>
