--- a/site/index.html
+++ b/site/index.html
@@ -4993,6 +4993,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-7-7</p>
+<ul>
+<li>串口功能发布，在串口页完成配置和连接后，可以在通用配置-按键映射配置串口的映射关系（适用于弹幕现实游戏-串口控制功能）</li>
+</ul>
+</li>
+<li>
 <p>2024-7-3</p>
 <ul>
 <li>修改faster-whisper默认模型为small</li>
