--- a/site/index.html
+++ b/site/index.html
@@ -4993,6 +4993,14 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-7-8</p>
+<ul>
+<li>修复串口功能无法使用的bug（单例模式没有，串口的等待数据返回删了，会影响运行，只发送，不接收）</li>
+<li>修复了串口页的数据保存bug</li>
+<li>串口页的按钮仍有bug</li>
+</ul>
+</li>
+<li>
 <p>2024-7-7</p>
 <ul>
 <li>串口功能发布，在串口页完成配置和连接后，可以在通用配置-按键映射配置串口的映射关系（适用于弹幕现实游戏-串口控制功能）</li>
