--- a/site/index.html
+++ b/site/index.html
@@ -5027,6 +5027,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-7-17</p>
+<ul>
+<li>接入Dify 聊天助手的API</li>
+</ul>
+</li>
+<li>
 <p>2024-7-13</p>
 <ul>
 <li>修正 录音配置的描述</li>
