修复 按键映射 礼物触发部分的bug，增加单个触发类型的异常捕获，单个触发出错不影响其他触发工作

--- a/site/index.html
+++ b/site/index.html
@@ -5049,6 +5049,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-7-19</p>
 <ul>
 <li>【webui】gpt新增gpt-4o-mini模型</li>
+<li>修复 按键映射 礼物触发部分的bug，增加单个触发类型的异常捕获，单个触发出错不影响其他触发工作</li>
 </ul>
 </li>
 <li>
