--- a/site/index.html
+++ b/site/index.html
@@ -5046,6 +5046,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-7-20</p>
+<ul>
+<li>youtube监听增加重连机制，短时间内多次重连判断为无法连接，超过30s则无限重连 </li>
+</ul>
+</li>
+<li>
 <p>2024-7-19</p>
 <ul>
 <li>【webui】gpt新增gpt-4o-mini模型</li>
