--- a/site/index.html
+++ b/site/index.html
@@ -5046,6 +5046,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-7-21</p>
+<ul>
+<li>兼容gpt sovits官方整合包0706</li>
+</ul>
+</li>
+<li>
 <p>2024-7-20</p>
 <ul>
 <li>youtube监听增加重连机制，短时间内多次重连判断为无法连接，超过30s则无限重连 </li>
@@ -7075,7 +7081,6 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <h3 id="_85">💸投资方</h3>
 <p><img alt="image" src="static/images/luna-ai/invest.png" /></p>
 <h3 id="_86">合作伙伴</h3>
-<p>青椒云：<a href="https://account.qingjiaocloud.com/signin?inviteCode=4Q92ROBQ">qingjiaocloud.com</a>  ———— AIGC 高性能云桌面  </p>
 <p>睿声AI：<a href="https://www.reecho.ai/">reecho.ai</a>  ———— 瞬时创建 超级拟真的 人工智能克隆语音  </p>
 <p>AIHubMix: <a href="https://aihubmix.com/register?aff=1BMI">aihubmix.com</a>  ———— OpenAI,Google,通义千问等大语言模型API代理站  </p>
 <h3 id="_87">🙌赞助</h3>
@@ -7093,6 +7098,10 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <tr>
 <td>QQ：750359376</td>
 <td>笑死，连点开源精神都没有</td>
+</tr>
+<tr>
+<td>QQ：378198682</td>
+<td>【散播谣言】</td>
 </tr>
 </tbody>
 </table>
