--- a/site/index.html
+++ b/site/index.html
@@ -5046,6 +5046,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-7-23</p>
+<ul>
+<li>弃用flask，改用fastapi（测试了 聊天页发送、微信号对接，暂时没有发现问题。稳定性待测试）</li>
+</ul>
+</li>
+<li>
 <p>2024-7-21</p>
 <ul>
 <li>兼容gpt sovits官方整合包0706</li>
