--- a/site/index.html
+++ b/site/index.html
@@ -3172,6 +3172,8 @@
 <p class="admonition-title">广告</p>
 <p>如需付费调试，请联系Q <code>327209194</code></p>
 <p>交流Q群 <code>587663288</code></p>
+<p>AIHubMix: <a href="https://aihubmix.com/register?aff=1BMI">aihubmix.com</a> —— OpenAI,Google,通义千问等大语言模型API代理站  </p>
+<p>​迅雷加速器：<a href="https://jsq.xunlei.com/">jsq.xunlei.com</a> 新用户可以凭口令领取7x24小时的免费福利加速。兑换码 口令：ikaros  </p>
 <p>更多广告招租（...）</p>
 </div>
 <div class="admonition quote">
@@ -7089,6 +7091,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <h3 id="_86">合作伙伴</h3>
 <p>睿声AI：<a href="https://www.reecho.ai/">reecho.ai</a>  ———— 瞬时创建 超级拟真的 人工智能克隆语音  </p>
 <p>AIHubMix: <a href="https://aihubmix.com/register?aff=1BMI">aihubmix.com</a>  ———— OpenAI,Google,通义千问等大语言模型API代理站  </p>
+<p>​迅雷加速器：<a href="https://jsq.xunlei.com/">jsq.xunlei.com</a> 新用户可以凭口令领取7x24小时的免费福利加速。兑换码 口令：ikaros  </p>
 <h3 id="_87">🙌赞助</h3>
 <p><img alt="image" src="static/images/luna-ai/alipay.png" width="200" />
 <img alt="image" src="static/images/luna-ai/wechatpay.png" width="200" /></p>
