--- a/site/index.html
+++ b/site/index.html
@@ -5111,6 +5111,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-7-28</p>
+<ul>
+<li>修复qwen漏改的log</li>
+</ul>
+</li>
+<li>
 <p>2024-7-27</p>
 <ul>
 <li>聊天模式 STT识别为空 过滤不触发</li>
