--- a/site/index.html
+++ b/site/index.html
@@ -5111,6 +5111,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>讯飞星火 模型命名改为官方新命名，新增4.0和pro-128k，使用请先更新库 <a href="https://github.com/Ikaros-521/sparkdesk-api">sparkdesk-api</a></li>
 <li>聊天页 聊天框提前到核心配置下，省得拉到底下才能对话</li>
+<li>修复音频播放间隔的随机数生成后 没有int化的bug</li>
 </ul>
 </li>
 <li>
