--- a/site/index.html
+++ b/site/index.html
@@ -5112,6 +5112,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>讯飞星火 模型命名改为官方新命名，新增4.0和pro-128k，使用请先更新库 <a href="https://github.com/Ikaros-521/sparkdesk-api">sparkdesk-api</a></li>
 <li>聊天页 聊天框提前到核心配置下，省得拉到底下才能对话</li>
 <li>修复音频播放间隔的随机数生成后 没有int化的bug</li>
+<li>OpenAI接口支持流式输出（简单测试暂时没啥问题），默认OpenAI ChatGPT模式使用流式 提速</li>
+<li>弹幕日志相关记录封装函数，降低冗余</li>
 </ul>
 </li>
 <li>
