--- a/site/index.html
+++ b/site/index.html
@@ -5114,6 +5114,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>修复音频播放间隔的随机数生成后 没有int化的bug</li>
 <li>OpenAI接口支持流式输出（简单测试暂时没啥问题），默认OpenAI ChatGPT模式使用流式 提速</li>
 <li>弹幕日志相关记录封装函数，降低冗余</li>
+<li>优化openai流式返回的语句切分逻辑</li>
 </ul>
 </li>
 <li>
