--- a/site/index.html
+++ b/site/index.html
@@ -5115,6 +5115,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>OpenAI接口支持流式输出（简单测试暂时没啥问题），默认OpenAI ChatGPT模式使用流式 提速</li>
 <li>弹幕日志相关记录封装函数，降低冗余</li>
 <li>优化openai流式返回的语句切分逻辑</li>
+<li>智谱AI，2.x+的库兼容流式推理</li>
 </ul>
 </li>
 <li>
