--- a/site/index.html
+++ b/site/index.html
@@ -5107,6 +5107,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-8-1</p>
+<ul>
+<li>协同 数字人视频播放器-v0.2.2 接入AniTalker</li>
+</ul>
+</li>
+<li>
 <p>2024-7-31</p>
 <ul>
 <li>讯飞星火 模型命名改为官方新命名，新增4.0和pro-128k，使用请先更新库 <a href="https://github.com/Ikaros-521/sparkdesk-api">sparkdesk-api</a></li>
