--- a/site/index.html
+++ b/site/index.html
@@ -5127,6 +5127,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-8-6</p>
 <ul>
 <li>webui配置保存提示优化（提示当前平台、LLM、TTS等选项）</li>
+<li>聊天页 新增 直接语音对话 开关，如果启用了，将在首次运行时直接进行语音识别，而不需手动点击开始按键。针对有些系统按键无法触发的情况下，配合连续对话和唤醒词使用</li>
 </ul>
 </li>
 <li>
