--- a/site/index.html
+++ b/site/index.html
@@ -5144,6 +5144,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-8-13</p>
+<ul>
+<li>聊天页，语音唤醒新增模式选择：长期唤醒/单次唤醒，新的单次唤醒意味着每次触发都需要携带唤醒词</li>
+</ul>
+</li>
+<li>
 <p>2024-8-11</p>
 <ul>
 <li>虚拟身体对接 live2d_TTS_LLM_GPT_SoVITS_Vtuber</li>
