--- a/site/index.html
+++ b/site/index.html
@@ -5147,6 +5147,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-8-13</p>
 <ul>
 <li>聊天页，语音唤醒新增模式选择：长期唤醒/单次唤醒，新的单次唤醒意味着每次触发都需要携带唤醒词</li>
+<li>聊天页 唤醒后，唤醒词将被替换为空</li>
 </ul>
 </li>
 <li>
