--- a/site/index.html
+++ b/site/index.html
@@ -5143,6 +5143,10 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
+<li>2024-8-14<ul>
+<li>通义星尘兼容流式推理（脑测没问题）</li>
+</ul>
+</li>
 <li>
 <p>2024-8-13</p>
 <ul>
