--- a/site/index.html
+++ b/site/index.html
@@ -5143,8 +5143,11 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
-<li>2024-8-14<ul>
+<li>
+<p>2024-8-14</p>
+<ul>
 <li>通义星尘兼容流式推理（脑测没问题）</li>
+<li>千帆大模型支持流式输出（AppBuilder脑测兼容，不兼容的话提个issue）</li>
 </ul>
 </li>
 <li>
