--- a/site/index.html
+++ b/site/index.html
@@ -5144,6 +5144,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-8-16</p>
+<ul>
+<li>优化：千帆大模型，AppBuilder输出内容过滤*和特殊[]，数据解析改至倒叙遍历返回</li>
+</ul>
+</li>
+<li>
 <p>2024-8-14</p>
 <ul>
 <li>通义星尘兼容流式推理（脑测没问题）</li>
