--- a/site/index.html
+++ b/site/index.html
@@ -5144,6 +5144,18 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-8-28</p>
+<ul>
+<li>新增：智谱AI新增glm4-flash，模型选择框支持自定义输入，用于支持其他模型</li>
+</ul>
+</li>
+<li>
+<p>2024-8-20</p>
+<ul>
+<li>修复：谷歌翻译 代理没配置的情况下，变量未定义问题</li>
+</ul>
+</li>
+<li>
 <p>2024-8-16</p>
 <ul>
 <li>优化：千帆大模型，AppBuilder输出内容过滤*和特殊[]，数据解析改至倒叙遍历返回</li>
@@ -7303,6 +7315,10 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <tr>
 <td>QQ：1939834860</td>
 <td>【广告哥】</td>
+</tr>
+<tr>
+<td>QQ：1687246688</td>
+<td>【白嫖还嘴臭】</td>
 </tr>
 </tbody>
 </table>
