--- a/site/index.html
+++ b/site/index.html
@@ -5144,6 +5144,18 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-8-31</p>
+<ul>
+<li>新增：GPT-SOVITS-V2 0821整合包API对接</li>
+</ul>
+</li>
+<li>
+<p>2024-8-30</p>
+<ul>
+<li>新增：main程序新增 待播放音频数量（在使用 音频播放器 或者 metahuman-stream等不通过AI Vtuber播放音频的对接项目时，使用此变量记录是是否还有音频没有播放完），开发者通过8082的callback回调传入，即可更新此变量</li>
+</ul>
+</li>
+<li>
 <p>2024-8-28</p>
 <ul>
 <li>新增：智谱AI新增glm4-flash，模型选择框支持自定义输入，用于支持其他模型</li>
