--- a/site/index.html
+++ b/site/index.html
@@ -5144,6 +5144,10 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-9-1
+    优化：GPT-SOVITS 模型加载兼容V2的API</p>
+</li>
+<li>
 <p>2024-8-31</p>
 <ul>
 <li>新增：GPT-SOVITS-V2 0821整合包API对接</li>
