--- a/site/index.html
+++ b/site/index.html
@@ -5158,12 +5158,16 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 </ul>
 </li>
 <li>
-<p>2024-9-4
-    新增：大语言模型 接入 火山引擎（豆包）</p>
+<p>2024-9-4</p>
+<ul>
+<li>新增：大语言模型 接入 火山引擎（豆包）</li>
+</ul>
 </li>
 <li>
-<p>2024-9-1
-    优化：GPT-SOVITS 模型加载兼容V2的API</p>
+<p>2024-9-1</p>
+<ul>
+<li>优化：GPT-SOVITS 模型加载兼容V2的API</li>
+</ul>
 </li>
 <li>
 <p>2024-8-31</p>
