新增：联网搜索功能（暂时支持 百度、谷歌），联网搜索内容执行点在llm前，所以其结果会组合到弹幕中一并提交给LLM

--- a/site/index.html
+++ b/site/index.html
@@ -5161,6 +5161,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-9-27</p>
+<ul>
+<li>新增：联网搜索功能（暂时支持 百度、谷歌），联网搜索内容执行点在llm前，所以其结果会组合到弹幕中一并提交给LLM</li>
+</ul>
+</li>
+<li>
 <p>2024-9-12</p>
 <ul>
 <li>新增：对接CosyVoice 0819的API</li>
