--- a/site/index.html
+++ b/site/index.html
@@ -5161,6 +5161,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-10-2</p>
+<ul>
+<li>修复：流式LLM时 如果结尾没有中文标点符号会丢句子的bug</li>
+</ul>
+</li>
+<li>
 <p>2024-10-1</p>
 <ul>
 <li>新增：联网搜索新增触发关键词</li>
