--- a/site/index.html
+++ b/site/index.html
@@ -5196,6 +5196,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-10-10</p>
 <ul>
 <li>新增：对接智谱AI 智能体</li>
+<li>重大更新：对webui配置保存的代码实现进行了简化，只进行了简单测试，可能有bug，请谨慎使用</li>
+<li>待办：路径统一到pathlib库规范</li>
 </ul>
 </li>
 <li>
