--- a/site/index.html
+++ b/site/index.html
@@ -4196,6 +4196,11 @@ playwright<span class="w"> </span>install
 </ul>
 <p>解决方案：<a href="//github.com/Ikaros-521/AI-Vtuber/issues/381#issuecomment-1774128497">AI-Vtuber/issues/381#issuecomment-1774128497</a></p>
 </details>
+<details class="note">
+<summary>如何 不使用audio player，指定ai vtb的音频输出到指定声卡/扬声器？</summary>
+<p>在线图文教程：<a href="https://github.com/Ikaros-521/AI-Vtuber/issues/1018">issues/1018 <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"/></svg></span></a>  </p>
+<p><img alt="image" src="static/images/luna-ai/set_app_audio_to_custom_device.png" /></p>
+</details>
 <h2 id="api">API</h2>
 <p>API接口地址根据配置文件中webui的ip端口地址决定，默认：<code>http://127.0.0.1:8081</code>  </p>
 <h3 id="config">配置config</h3>
