--- a/site/index.html
+++ b/site/index.html
@@ -5202,6 +5202,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-10-16</p>
+<ul>
+<li>优化：common通用请求增加proxy参数；webui所有同步http请求更换为异步请求</li>
+</ul>
+</li>
+<li>
 <p>2024-10-10</p>
 <ul>
 <li>新增：对接智谱AI 智能体</li>
