--- a/site/index.html
+++ b/site/index.html
@@ -5202,6 +5202,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-10-18</p>
+<ul>
+<li>新增：按键映射板块新增 图片映射功能，可以通过关键词或者礼物触发，将本地图片添加到虚拟摄像头用于直播使用（默认随机路径）</li>
+</ul>
+</li>
+<li>
 <p>2024-10-16</p>
 <ul>
 <li>优化：common通用请求增加proxy参数；webui所有同步http请求更换为异步请求</li>
