--- a/site/index.html
+++ b/site/index.html
@@ -5204,7 +5204,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>
 <p>2024-10-18</p>
 <ul>
-<li>新增：按键映射板块新增 图片映射功能，可以通过关键词或者礼物触发，将本地图片添加到虚拟摄像头用于直播使用（默认随机路径）</li>
+<li>新增：按键映射板块新增 图片映射功能，可以通过关键词或者礼物触发，将本地图片添加到虚拟摄像头用于直播使用（默认随机路径）沿用SD做为虚拟摄像头服务托管，背景色#00ff00ff 纯绿色，像素1080P</li>
 </ul>
 </li>
 <li>
