--- a/site/index.html
+++ b/site/index.html
@@ -5202,6 +5202,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-10-22</p>
+<ul>
+<li>新增：通用配置-辅助软件板块 新增 “洛曦 直播弹幕助手”的对接，用于将系统相关消息转发到直播间弹幕区等</li>
+</ul>
+</li>
+<li>
 <p>2024-10-18</p>
 <ul>
 <li>新增：按键映射板块新增 图片映射功能，可以通过关键词或者礼物触发，将本地图片添加到虚拟摄像头用于直播使用（默认随机路径）沿用SD做为虚拟摄像头服务托管，背景色#00ff00ff 纯绿色，像素1080P</li>
