--- a/site/index.html
+++ b/site/index.html
@@ -5202,6 +5202,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-10-23</p>
+<ul>
+<li>新增：本地问答-文本 调用洛曦 直播弹幕助手接口（配置 弹幕回复 即可）</li>
+</ul>
+</li>
+<li>
 <p>2024-10-22</p>
 <ul>
 <li>新增：通用配置-辅助软件板块 新增 “洛曦 直播弹幕助手”的对接，用于将系统相关消息转发到直播间弹幕区等</li>
