--- a/site/index.html
+++ b/site/index.html
@@ -5205,6 +5205,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-10-23</p>
 <ul>
 <li>新增：本地问答-文本 调用洛曦 直播弹幕助手接口（配置 弹幕回复 即可）</li>
+<li>新增：对接F5-TTS gradio API（20241023主线版本）</li>
 </ul>
 </li>
 <li>
