--- a/site/index.html
+++ b/site/index.html
@@ -7457,8 +7457,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>AIHubMix: <a href="https://aihubmix.com/register?aff=1BMI">aihubmix.com</a>  ———— OpenAI,Google,通义千问等大语言模型API代理站  </p>
 <p>​迅雷加速器：<a href="https://jsq.xunlei.com/">jsq.xunlei.com</a> 新用户可以凭口令领取7x24小时的免费福利加速。兑换码 口令：ikaros  </p>
 <h3 id="_87">🙌赞助</h3>
-<p><img alt="image" src="static/images/luna-ai/alipay.png" width="200" />
-<img alt="image" src="static/images/luna-ai/wechatpay.png" width="200" /></p>
+<p><img alt="image" src="static/images/luna-ai/zfb-wx.png" width="400" /></p>
 <h2 id="_88">黑名单</h2>
 <table>
 <thead>
