--- a/site/index.html
+++ b/site/index.html
@@ -5201,6 +5201,10 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
+<li>2024-10-25<ul>
+<li>新增：聊天页 新增 对话打断功能，支持自定义 打断词、打断时清除什么类型的数据等。</li>
+</ul>
+</li>
 <li>2024-10-24<ul>
 <li>优化：消息&amp;音频队列优先级新增 助播文本、音频的设置</li>
 </ul>
