--- a/site/index.html
+++ b/site/index.html
@@ -5201,11 +5201,16 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
-<li>2024-10-26<ul>
+<li>
+<p>2024-10-26</p>
+<ul>
 <li>新增：洛曦 直播弹幕助手 新增类型 弹幕消息，用于转发直播中的弹幕消息</li>
+<li>修复：智谱AI因为对接智能体 导致的代码写漏了判断条件遗留的bug</li>
 </ul>
 </li>
-<li>2024-10-25<ul>
+<li>
+<p>2024-10-25</p>
+<ul>
 <li>新增：聊天页 新增 对话打断功能，支持自定义 打断词、打断时清除什么类型的数据等。</li>
 </ul>
 </li>
