--- a/site/index.html
+++ b/site/index.html
@@ -5201,6 +5201,11 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
+<li>2024-10-26<ul>
+<li>修复：快手弹幕监听失败的bug；</li>
+<li>新增：对接 让弹幕飞（多直播平台弹幕监听平台）</li>
+</ul>
+</li>
 <li>
 <p>2024-10-26</p>
 <ul>
