--- a/site/index.html
+++ b/site/index.html
@@ -5218,6 +5218,10 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
+<li>2024-10-31<ul>
+<li>新增：文本转语音 新增 不启用类型，可以不进行TTS合成喵</li>
+</ul>
+</li>
 <li>2024-10-30<ul>
 <li>新增：对接MultiTTS</li>
 </ul>
