--- a/site/index.html
+++ b/site/index.html
@@ -5218,11 +5218,22 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
-<li>2024-10-31<ul>
-<li>新增：文本转语音 新增 不启用类型，可以不进行TTS合成喵</li>
+<li>
+<p>2024-10-31</p>
+<ul>
+<li>新增：淘宝直播的接入（配合 监听脚本使用） </li>
 </ul>
 </li>
-<li>2024-10-30<ul>
+<li>
+<p>2024-10-31</p>
+<ul>
+<li>新增：文本转语音 新增 不启用类型，可以不进行TTS合成喵</li>
+<li>优化：修改默认multitts的语速为50 </li>
+</ul>
+</li>
+<li>
+<p>2024-10-30</p>
+<ul>
 <li>新增：对接MultiTTS</li>
 </ul>
 </li>
