--- a/site/index.html
+++ b/site/index.html
@@ -5218,6 +5218,23 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
+<li>2024-11-13<ul>
+<li>修复：因为板块隐藏导致变量未定义的bug</li>
+</ul>
+</li>
+<li>
+<p>2024-11-10</p>
+<ul>
+<li>修复：Text Gen WebUI 日志调用错误bug（未测试，脑测没问题） </li>
+<li>修复：metahuman_stream情况下播放状态检查 阻塞了main运行的bug </li>
+</ul>
+</li>
+<li>
+<p>2024-11-3</p>
+<ul>
+<li>新增：洛曦 直播弹幕助手 新增类型 按键映射-文案，对此类型消息支持(播放时的转发没有实现，因为类型定义没有这么细化)</li>
+</ul>
+</li>
 <li>
 <p>2024-10-31</p>
 <ul>
