--- a/site/index.html
+++ b/site/index.html
@@ -5218,7 +5218,15 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
-<li>2024-11-13<ul>
+<li>
+<p>2024-11-14</p>
+<ul>
+<li>修复：异常报警 和 DDSP配置保存错乱bug</li>
+</ul>
+</li>
+<li>
+<p>2024-11-13</p>
+<ul>
 <li>修复：因为板块隐藏导致变量未定义的bug</li>
 </ul>
 </li>
