--- a/site/index.html
+++ b/site/index.html
@@ -5218,10 +5218,15 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
+<li>2024-11-26<ul>
+<li>新增：对接MeloTTS API</li>
+</ul>
+</li>
 <li>
 <p>2024-11-14</p>
 <ul>
 <li>修复：异常报警 和 DDSP配置保存错乱bug</li>
+<li>修复：补充遗漏的火山引擎 显隐开关功能</li>
 </ul>
 </li>
 <li>
