--- a/site/index.html
+++ b/site/index.html
@@ -5220,6 +5220,16 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
+<li>2024-12-31<ul>
+<li>新增：webui和main增加https ssl证书的demo例程；main新增tts合成接口；main新增本地路径挂载功能</li>
+</ul>
+</li>
+<li>
+<p>2024-12-29</p>
+<ul>
+<li>优化：LLM流式响应 openai接口的数据时，有的服务端会返回none数据，进行特殊处理</li>
+</ul>
+</li>
 <li>
 <p>2024-12-16</p>
 <ul>
