--- a/site/index.html
+++ b/site/index.html
@@ -5220,7 +5220,15 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
-<li>2024-12-31<ul>
+<li>
+<p>2025-01-07</p>
+<ul>
+<li>新增：小红书监听适配</li>
+</ul>
+</li>
+<li>
+<p>2024-12-31</p>
+<ul>
 <li>新增：webui和main增加https ssl证书的demo例程；main新增tts合成接口；main新增本地路径挂载功能</li>
 </ul>
 </li>
