--- a/site/index.html
+++ b/site/index.html
@@ -5224,6 +5224,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2025-01-07</p>
 <ul>
 <li>新增：小红书监听适配</li>
+<li>新增：dify支持工作流模式（自定义传参，获取文本返回）</li>
 </ul>
 </li>
 <li>
